--- a/facts.yml
+++ b/facts.yml
@@ -1,6 +1,6 @@
 ---
 - info: >
-    True Survivor by David Hasselhoff from the Kung Fury soundtrack:
+    *True Survivor* by _David Hasselhoff_ from the Kung Fury soundtrack:
 
     https://www.youtube.com/watch?v=ZTidn2dBYbY
 
@@ -14,7 +14,7 @@
   types: [text]
 
 - info: >
-    Burger Man from ZZ Top
+    *Burger Man* from _ZZ Top_
 
     https://www.youtube.com/watch?v=XJP8wVoTufg
 
@@ -22,7 +22,7 @@
   types: [music, video]
 
 - info: >
-    Cheap Sunglasses from ZZ Top
+    *Cheap Sunglasses* from _ZZ Top_
 
     https://www.youtube.com/watch?v=QePcj9BplMQ
 
